--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-
-    <script src="./js/task1.js" type="module"></script>
+    <script src="./js/hw3-task1.js" type="module"></script>
+    <script src="./js/hw3-task2.js" type="module"></script>
+    <script src="./js/hw3-task3.js" type="module"></script>
+    <script src="./js/hw3-task4.js" type="module"></script>
 </body>
 </html>
