--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <script src="./js/hw3-task2.js" type="module"></script>
     <script src="./js/hw3-task3.js" type="module"></script>
     <script src="./js/hw3-task4.js" type="module"></script>
+    <script src="./js/hw3-task5.js" type="module"></script>
 </body>
 </html>
